# NeuralNetwork

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
examples/: example_xor.cpp  test_basic.cpp
include/: NeuralNetwork.hpp
include/NeuralNetwork/: ActivationFunctions.h  Layer.h  Matrix.h  NeuralNetwork.h
include/matrix/: blasgemm.h  calc.hpp  ctor.hpp  matrix  matrix.h  ops.hpp  util.hpp
include/matrix/blasgemms/: clblas-gemm.hpp  clblast-gemm.hpp  cublas-gemm.hpp  openblas-gemm.hpp
include/view/: view.h
setup/: portfile.cmake  setup.bat
src/: ActivationFunctions.cpp  Layer.cpp  Matrix.cpp  NNtest.cpp  NeuralNetwork.cpp  main.cpp  matrixbenchmark.hpp  matrixtest.cpp  matrixtest.hpp  nnlearncomplete.hpp  nntest.hpp  performance.cpp  performance.h
src/include/: color.hpp
src/include/layers/: affine.hpp  gelu.hpp  identitywithloss.hpp  layerbase.hpp  relu.hpp  sigmoid.hpp  softmaxwithloss.hpp  tanh.hpp
src/include/matrix/: blasgemm.h  calc.hpp  concepts.hpp  ctor.hpp  matrix  matrix.h  ops.hpp  util.hpp
src/include/matrix/bit/: bitarray.hpp
src/include/matrix/blasgemms/: cublas-gemm.hpp
src/include/neuralnetwork/: neuralnetwork.hpp
src/include/neuralnetwork/layers/: Convolution.hpp  affine.hpp  batchnormalization.hpp  dropout.hpp  identitywithloss.hpp  layerbase.hpp  optimizer.hpp  relu.hpp  sigmoid.hpp  softmaxwithloss.hpp  tanh.hpp
src/include/view/: view.h
